# save-image-extended-comfyui

./: .gitignore  README.md  __init__.py  commit.gitsync  commit.gitsync.2.43.txt  commit.gitsync.2.44.txt  power_save.py  pyproject.toml  requirements.txt  save_image_extended.py
.github/: workflows.publish_action.yml
assets/: save-image-extended-comfyui-featured.ini
web/js/: contextmenu.js  help_popup.js  shared_utils.js
